--- a/style.css
+++ b/style.css
@@ -1,26 +1,14 @@
-/* :root{
-    --branding-color:#420516;
-    --light-color:#FAF2F2;
-    --text-color:#2b2b2b;
-    --btn-color:#7D1935;
-} */
-
 body {
     font-family:  'Quicksand', sans-serif;
 }
 
-
+/* Index Select Languages */
 .index-container h1 {
     font-size: 70px;
     font-weight: 700;
     text-align: center;
     padding: 50px;
-    /* color: var(--branding-color); */
 }
-
-/* .spanish {
-
-} */
 
 .index-button a {
     font-size: 25px;
@@ -40,24 +28,12 @@ body {
     border: 1px solid black;
 }
 
-/* h2 {
-    font-size: 40px;
-    color:var(--text-color);
-    text-align: center;
-} */
-
-/* h3 {
-    font-weight: 600;
-} */
+/* Navigation Bar */
 
 .log {
     max-width: 70px;
     border-radius: 50px;
 }
-
-/* .logo {
-    border-radius: 50px;
-} */
 
 nav {
     padding: 20px 0;
@@ -105,6 +81,8 @@ nav a:hover{
 .active{
     font-weight: 700;
 }
+
+/* Header */
 
 main {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
@@ -161,43 +139,34 @@ main a:hover {
     cursor: pointer;
 }
 
-.about {
-    background-color: white;
+/* About me section */
+.grid {
+    display: grid;
+    grid-gap: 64px;
 }
 
-.about h2 {
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 1.5;
-    margin: 0;
-    letter-spacing: 5px;
-    color: #272044;
-    opacity: 0.3;
-    text-transform: uppercase;
+.grid-2-columns {
+    grid-template-columns: 1fr 1fr;
+}
+
+.img-responsive {
+    width: 100%;
+    display: block;
+    padding: 20px;
+}
+
+.about {
+    background-color: #F6E8D4;
 }
 
 .about h3 {
-    font-weight: 700;
+    font-weight: 500;
     font-size: 40px;
     line-height: 1.5;
     color: #272044;
     margin: 0;
-}
-
-.about h4 {
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 1;
-    color: #272044;
-    margin: 0;
-}
-
-.about h5 {
-    font-weight: 700;
-    font-size: 18px;
-    margin: 0;
-    line-height: 1;
-    color: #272044;
+    padding-bottom: 20px;
+    padding-top: 50px;
 }
 
 .about p {
@@ -208,195 +177,12 @@ main a:hover {
     color: #15131cdf;
 }
 
-/* .greeting {
-    text-align: center;
-    background:linear-gradient(0deg, rgb(247, 247, 247) 23.8%, rgb(248, 240, 240) 92%);
-    padding: 150px 30px;
-   
-}
-
-.greeting p {
-    font-size: 35px;
-    margin:0;
-    color:var(--text-color)
-}
-
-.btn-branding {
-    background-color:var(--branding-color);
-    color:var(--light-color);
-    border-radius: 50px;
-    font-size:25px;
-    padding: 10px 20px;
-    transition: all 200ms ease-in-out;
-}
-
-.btn-branding:hover {
-    background-color:var(--btn-color);
-    color:var(--light-color);
-    cursor: pointer;
-    border: 0.5px solid #b3b3b3;
-}
-
-
-.check-out{ 
-    font-size: 35px;
-    color:var(--text-color);
-}
-
-.project-description {
-    font-size: 20px;
-}
-
-.profile-pic {
-    border-radius: 10px;
-}
-
-.resume-link {
-    font-size: 20px;
-    text-decoration: none;
-    color: #420516;
-    transition: all 200ms ease-in-out;
-}
-
-.resume-link:hover {
-    color: #cda5b0;
-    cursor: pointer;
-}
-
-.button {
-    text-align: center; 
-    margin-bottom: 5px;
-}
-
-.btn-branding-outline {
-    background-color:var(--btn-color);
-    color:var(--light-color);
-    border-radius: 50px;
-    font-size:22px;
-    padding: 10px 20px;
-    transition: all 200ms ease-in-out;
-}
-
-.btn-branding-outline:hover {
-    background-color:#B42B51 ;
-    border:0.5px solid #B42B51;
-    color:var(--light-color) ;
-    cursor: pointer;
-}
-
-.women {
-    border-radius: 10px;
-    height: 200;
-    box-shadow: 9px 6px 22px 1px rgba(0, 0, 0, 0.2);
-
-}
-
-.weather {
-    border-radius: 10px;
-    height: 200;
-    box-shadow: 9px 6px 22px 1px rgba(0, 0, 0, 0.2);
-
-}
-
-#astronomy {
-    border-radius: 10px;
-    width: 100;
-    box-shadow: 9px 6px 22px 1px rgba(0, 0, 0, 0.2);
-}
-
-.project{
-    padding: 120px 60px;
-}
-
-.content {
-    padding: 100px 20px;
-}
-
-.content p {
-    font-size: 20px;
-}
-
-.about-me {
-    font-size: 60px;
-    text-align: center;
-}
-
-.about-section img {
-    border-radius: 4px;
-    box-shadow: 4px 9px 14px 1px rgba(0, 0, 0, 0.2);
-}
-
-
-.project-link {
-    color:var(--btn-color);
-    transition: all 200ms ease-in-out;
-    text-decoration: none;
-}
-
-.project-link:hover{
-    color:#FBD6D2;
-}
-
-.tech-section {
-    background-color: #f9f2f4;
-}
-
-.grid {
-    display: grid;
-    grid-gap: 28px;
-}
-
-.grid-4-columns {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  }
-
-
-footer {
-    margin:60px 0;
-}
-
-footer .contact-box {
-   background: #FAF2F2; 
-   padding: 30px 120px;
-   border-radius: 10px;
-}
-
-footer .contact-box p {
-    margin: 0 auto;
-}
-
-footer .email-link {
-text-decoration: none;
-color:black;
-font-size: 24px;
-text-align: center;
-}
-
-footer .email-link:hover{
-    color:var(--btn-color);
-}
-
-footer .social-links a {
-    margin:0 20px;
-    color: #FAF2F2;
-    background: var(--branding-color);
-    padding: 10px 14px;
-    border-radius: 50%;
-    font-size: 18px;
-    transition: all 200ms ease-in-out;
-  
-}
+/* Get to know me section */
 
 
 
-footer .social-links a:hover{
-   background: #FAF2F2;
-   color: #420516;
-  
-}
 
-
-@media  (max-width:900px) {
+/* @media  (max-width:900px) {
 
     h1{
         font-size: 60px;
@@ -406,31 +192,8 @@ footer .social-links a:hover{
         font-size: 35px;
     }
 
-    .hero {
-        padding: 80px 20px;
-    }
-
-    .project {
-        padding:0;
-        text-align: center;
-    }
-
-    .about-section {
-        text-align: center;
-        padding:0;
-    }
-
     nav a {
         font-size: 14px;
     }
 
-    .grid {
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 32px;
-      }
-
-      .hide {
-        visibility: hidden;
-      }
-
-} */
+}  */
