--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+:root{
+    --background-color:#ffffff;
+    --main-color:#000000;
+    --text-light-color:#212529;
+    --accent-color:#F6E8D4;
+    --section-color:#fbf5ec;
+    --second-section-color:#1E1D1D;
+}
+
 body {
     font-family:  'Quicksand', sans-serif;
 }
@@ -5,33 +14,34 @@ body {
 /* Index Select Languages */
 .index-container h1 {
     font-size: 70px;
-    font-weight: 700;
+    font-weight: 600;
     text-align: center;
     padding: 50px;
+    color: var(--text-light-color);
 }
 
 .index-button a {
     font-size: 25px;
     text-decoration: none;
-    color:white;
-    background-color:black;
-    padding:10px;
+    background-color:var(--main-color);
+    color:var(--background-color);
+    padding:15px;
     border-radius:25px;
     transition: all 200ms ease-in-out;
-    margin: 10px;
+    margin: 20px;
 }
 
 .index-button a:hover {
-    background-color: white;
-    color:black;
+    background-color:var(--accent-color);
+    color:var(--text-color);
     cursor: pointer;
-    border: 1px solid black;
+    border: 1px solid var(--text-color);
 }
 
 /* Navigation Bar */
 
 .log {
-    max-width: 70px;
+    max-width: 60px;
     border-radius: 50px;
 }
 
@@ -54,32 +64,32 @@ nav li {
 
 nav a {
     text-decoration: none;
-    color:var(--btn-color);
+    color:var(--main-color);
     transition: all 200ms ease-in-out;
     font-size: 20px;
 }
 
 nav a:hover{
-    color:#a2a0a2;
+    color:var(--accent-color);
 }
 
 .resources {
-    background-color: black;
-    color: white;
+    background-color: var(--main-color);
+    color:var(--background-color);
     padding: 10px;
     border-radius: 25px;
     transition: all 200ms ease-in-out;
 }
 
 .resources:hover {
-    background-color: white;
-    color: black;
+    background-color:var(--accent-color);
+    color:var(--text-color);
     cursor: pointer;
     border:1px solid black;
 }
 
 .active{
-    font-weight: 700;
+    font-weight: 600;
 }
 
 /* Header */
@@ -89,14 +99,14 @@ main {
     url("./src/main.png");
     background-repeat: no-repeat;
     background-size: cover;
-    color: white;
+    color:var(--background-color);
     text-align: center;
     padding: 200px 0;
 }
 
 main h1 {
     font-weight: 500;
-    font-size: 96px;
+    font-size: 90px;
     line-height: 1;
     margin: 30px 0;
 }
@@ -108,34 +118,26 @@ main h2 {
     margin: 0;
 }
 
-main h3 {
-    font-weight: 900;
-    font-size: 24px;
-    line-height: 1.5;
-    letter-spacing: 5px;
-    margin: 0;
-}
-
 main a {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.5;
     text-align: center;
-    background:white;
+    background:var(--background-color);
     padding: 22px;
     margin-top: 32px;
     display: inline-block;
     letter-spacing: 3px;
     text-transform: uppercase;
     text-decoration: none;
-    color:#40323A;
-    border-radius: 25px;
+    color:var(--text-light-color);
+    border-radius: 35px;
     transition: all 200ms ease-in-out;
 }
 
 main a:hover {
-    background:#000000 ;
-    color: white;
+    background:var(--main-color) ;
+    color:var(--background-color);
     cursor: pointer;
 }
 
@@ -156,14 +158,14 @@ main a:hover {
 }
 
 .about {
-    background-color: #F6E8D4;
+    background-color: var(--section-color);
 }
 
 .about h3 {
     font-weight: 500;
     font-size: 40px;
     line-height: 1.5;
-    color: #272044;
+    color:var(--text-light-color);
     margin: 0;
     padding-bottom: 20px;
     padding-top: 50px;
@@ -174,34 +176,47 @@ main a:hover {
     font-weight: 400;
     font-size: 18px;
     line-height: 1.5;
-    color: #15131cdf;
+    color:var(--text-light-color);
 }
 
 /* Get to know me section */
 
 .get-to-know {
-    background-color: #1E1D1D;
+    background-color:var(--second-section-color);
+}
+
+.get-to-know h2 {
+    text-align: center;
+    color:var(--background-color);
+    font-size: 44px;
+    font-weight: 400;
+    padding: 20px;
 }
 
 .social-links a {
-    margin:0 20px;
-    color: #FAF2F2;
-    background: var(--branding-color);
-    padding: 10px 14px;
+    margin:0 50px;
+    color: var(--second-section-color);
+    background: var(--accent-color);
+    padding:24px;
     border-radius: 50%;
-    font-size: 18px;
+    font-size:45px;
     transition: all 200ms ease-in-out;
-  
-}
-
+    }
 
 
 .social-links a:hover{
-   background: #FAF2F2;
-   color: #420516;
-  
+    background:var(--second-section-color);
+    color:var(--accent-color);
+    border: 1px solid #F6E8D4;
 }
 
+/* .social {
+    margin:0 20px;
+    color: #f8f8f8;
+    padding: 24px;
+    font-size: 24px;
+    transition: all 200ms ease-in-out;
+    } */
 
 /* @media  (max-width:900px) {
 
