--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ main a:hover {
 .about p {
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 20px;
     line-height: 1.5;
     color:var(--text-light-color);
 }
@@ -197,9 +197,9 @@ main a:hover {
     margin:0 50px;
     color: var(--second-section-color);
     background: var(--accent-color);
-    padding:24px;
+    padding:30px;
     border-radius: 50%;
-    font-size:45px;
+    font-size:35px;
     transition: all 200ms ease-in-out;
     }
 
@@ -210,13 +210,60 @@ main a:hover {
     border: 1px solid #F6E8D4;
 }
 
-/* .social {
+.social {
     margin:0 20px;
-    color: #f8f8f8;
+    color:var(--background-color);
     padding: 24px;
     font-size: 24px;
     transition: all 200ms ease-in-out;
-    } */
+    }
+
+.social:hover {
+    text-decoration: none;
+    color:var(--accent-color);
+    }
+
+.description p {
+    color:var(--background-color);
+    text-align: center;
+    font-size: 18px;
+    font-weight:100;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+/* Footer */
+.grid-3-columns {
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.grid-3-columns-first-narrow {
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+footer {
+    background:var(--main-color);
+}
+
+footer h3 {
+    font-weight: 500;
+    font-size: 18px;
+}
+
+footer p {
+    font-size: 16px;
+}
+
+footer ul {
+    padding: 0;
+}
+
+footer li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
 
 /* @media  (max-width:900px) {
 
