--- a/style.css
+++ b/style.css
@@ -235,33 +235,46 @@ main a:hover {
 /* Footer */
 .grid-3-columns {
     grid-template-columns: 1fr 1fr 1fr;
-}
-
-.grid-3-columns-first-narrow {
-    grid-template-columns: 1fr 1fr 1fr;
+    padding:10px;
+    display: grid;
+    grid-gap: 50px;
 }
 
 footer {
     background:var(--main-color);
 }
 
-footer h3 {
+.grid-3-columns h3  {
     font-weight: 500;
     font-size: 18px;
+    color:var(--background-color);
 }
 
-footer p {
+.grid-3-columns p {
     font-size: 16px;
+    color: var(--background-color);
 }
 
-footer ul {
+.grid-3-columns ul {
     padding: 0;
 }
 
-footer li {
+.grid-3-columns li {
     list-style: none;
     margin: 0;
     padding: 0;
+    color: var(--background-color);
+} 
+
+.footer-link {
+    color:var(--background-color);
+    transition: all 200ms ease-in-out;
+}
+
+.footer-link:hover {
+    cursor:pointer;
+    color:var(--accent-color);
+    text-decoration: none;
 }
 
 
