--- a/style.css
+++ b/style.css
@@ -230,6 +230,7 @@ main a:hover {
     font-weight:100;
     margin-left: 15px;
     margin-right: 15px;
+    padding: 15px;
 }
 
 /* Footer */
@@ -278,24 +279,48 @@ footer {
 }
 
 /* Blog */
-.three-columns-blog {
-    grid-template-columns: 1fr 1fr 1fr;
+.four-columns-blog {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     display: grid;
     grid-gap:15px;
     padding:15px;
 }
 
 .blog-main{
-    background-color:var(--section-color);
+    background-color:var(--accent-color);
     padding: 15px;
 }
 
 .blog-card {
-    background-color:#1E1D1D;
+    background-color:var(--section-color);
     border-radius:10px;
-    color:var(--background-color);
+    color:var(--text-light-color);
     width:200px;
+    padding: 10px;
+    transition: all 200ms ease-in-out;
+}
 
+.blog-card:hover {
+    background-color:var(--accent-color);
+    cursor:pointer;
+    border:1px solid black;
+}
+
+.card-title {
+    letter-spacing:2px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.card-description {
+    text-align: center;
+    font-size:20px;
+    padding:5px;
+}
+
+.test {
+    width:180px;
+    border-radius:4px;
 }
 
 
