--- a/style.css
+++ b/style.css
@@ -323,6 +323,20 @@ footer {
     border-radius:4px;
 }
 
+/* Contact */
+
+.contact-link {
+    color: var(--text-light-color);
+    transition: all 200ms ease-in-out;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+.contact-link:hover {
+    color: var(--accent-color);
+    cursor: pointer;
+}
+
 
 /* @media  (max-width:900px) {
 
