--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ main a:hover {
     color: var(--second-section-color);
     background: var(--accent-color);
     padding:30px;
-    border-radius: 50%;
+    border-radius:100px;
     font-size:35px;
     transition: all 200ms ease-in-out;
     }
@@ -228,9 +228,7 @@ main a:hover {
     text-align: center;
     font-size: 18px;
     font-weight:100;
-    margin-left: 15px;
-    margin-right: 15px;
-    padding: 15px;
+    padding: 10px;
 }
 
 /* Footer */
