--- a/style.css
+++ b/style.css
@@ -279,10 +279,10 @@ footer {
 
 /* Blog */
 .four-columns-blog {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     display: grid;
     grid-gap:15px;
-    padding:15px;
+    padding:25px;
 }
 
 .blog-main{
@@ -294,8 +294,8 @@ footer {
     background-color:var(--section-color);
     border-radius:10px;
     color:var(--text-light-color);
-    width:200px;
-    padding: 10px;
+    width:300px;
+    padding: 15px;
     transition: all 200ms ease-in-out;
 }
 
@@ -320,6 +320,8 @@ footer {
 .test {
     width:180px;
     border-radius:4px;
+    display: block;
+    margin:0 auto;
 }
 
 /* Contact */
@@ -478,5 +480,51 @@ About me section */
 .grid-3-columns p  {
     font-size: 14px;
 }
+
+/* Blog */
+.four-columns-blog {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    display: grid;
+    grid-gap:15px;
+    padding:15px;
+}
+
+.blog-main{
+    background-color:var(--accent-color);
+    padding: 15px;
+}
+
+.blog-card {
+    background-color:var(--section-color);
+    border-radius:10px;
+    color:var(--text-light-color);
+    width:200px;
+    padding: 10px;
+    transition: all 200ms ease-in-out;
+}
+
+.blog-card:hover {
+    background-color:var(--accent-color);
+    cursor:pointer;
+    border:1px solid black;
+}
+
+.card-title {
+    letter-spacing:2px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.card-description {
+    text-align: center;
+    font-size:20px;
+    padding:5px;
+}
+
+.test {
+    width:180px;
+    border-radius:4px;
+}
+
 
 }
